--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - Smart AI Data Cleaner</title>
+
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/auth.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Sarabun:wght@300;400;600&display=swap"
+        rel="stylesheet">
+
+    <!-- ✅ เรียกใช้ CSS รวม -->
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<div class="login-container">
-    <div class="brand-side">
-        <div class="circle c1"></div>
-        <div class="circle c2"></div>
-        <div class="brand-content">
-            <h1 class="fw-bold brand-font display-4 mb-2">SmartClean AI</h1>
-            <p class="fs-5 opacity-75">Automated Data Cleaning & ML</p>
+
+<!-- ✅ ระบุว่าเป็นหน้า login ให้ JS รู้ -->
+
+<body data-page="login">
+
+    <div class="login-container">
+        <!-- Brand Side -->
+        <div class="brand-side">
+            <div class="circle c1"></div>
+            <div class="circle c2"></div>
+            <div class="brand-content">
+                <div class="bg-white text-primary rounded-3 p-3 d-inline-flex mb-4 shadow-lg">
+                    <i class="bi bi-stars display-4"></i>
+                </div>
+                <h1 class="fw-bold brand-font display-4 mb-2">SmartClean AI</h1>
+                <p class="fs-5 opacity-75">Automate your data preprocessing<br>with the power of AI.</p>
+            </div>
+        </div>
+
+        <!-- Form Side -->
+        <div class="form-side">
+            <div class="login-card">
+                <div class="text-center mb-5">
+                    <h2 class="fw-bold text-dark brand-font">Welcome Back</h2>
+                    <p class="text-muted">Please enter your details to sign in.</p>
+                </div>
+
+                <!-- ✅ ผูกฟังก์ชัน JS ที่เราเขียนไว้ใน main.js -->
+                <form onsubmit="handleLogin(event)">
+                    <div class="form-floating mb-3">
+                        <!-- ID ต้องตรงกับใน main.js -->
+                        <input type="email" class="form-control" id="emailInput" placeholder="name@example.com"
+                            required>
+                        <label class="text-muted"><i class="bi bi-envelope me-2"></i>Email Address</label>
+                    </div>
+
+                    <div class="form-floating mb-4">
+                        <input type="password" class="form-control" id="passwordInput" placeholder="Password" required>
+                        <label class="text-muted"><i class="bi bi-lock me-2"></i>Password</label>
+                    </div>
+
+                    <button type="submit" class="btn btn-login mb-3">Sign In</button>
+
+                    <div class="text-center mt-3">
+                        <p class="text-muted small">Don't have an account yet?
+                            <a href="register.html" class="text-primary fw-bold text-decoration-none">Create an
+                                account</a>
+                        </p>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="form-side">
-        <div class="login-card">
-            <h2 class="fw-bold text-center mb-4">Welcome Back</h2>
-            <form onsubmit="handleLogin(event)">
-                <input type="email" id="email" class="form-control mb-3" placeholder="Email Address" required>
-                <input type="password" id="password" class="form-control mb-4" placeholder="Password" required>
-                <button type="submit" class="btn btn-primary-gradient w-100 mb-3">Sign In</button>
-                <div class="text-center"><a href="register.html" class="text-primary text-decoration-none">Create an account</a></div>
-            </form>
-        </div>
-    </div>
-</div>
-<script>
-    async function handleLogin(e) {
-        e.preventDefault();
-        const btn = document.querySelector('button');
-        btn.innerHTML = "Checking..."; btn.disabled = true;
 
-        const res = await fetch("http://127.0.0.1:8000/login", {
-            method: "POST", headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ email: document.getElementById('email').value, password: document.getElementById('password').value })
-        });
-        const data = await res.json();
-
-        if (data.status === "success") {
-            localStorage.setItem('user', JSON.stringify(data));
-            window.location.href = "index.html";
-        } else {
-            alert(data.message);
-            btn.innerHTML = "Sign In"; btn.disabled = false;
-        }
-    }
-</script>
+    <!-- ✅ เรียกใช้ JS กลาง -->
+    <script src="script.js"></script>
 </body>
+
 </html>
