--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Create Account - SmartClean AI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Sarabun:wght@300;400;600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
-<body>
-<div class="login-container">
-    <div class="brand-side">
-        <h1 class="fw-bold display-4">Join Us</h1>
-        <p>Start cleaning data with AI today.</p>
-    </div>
-    <div class="form-side">
-        <div class="login-card">
-            <h2 class="fw-bold text-center mb-4">Create Account</h2>
-            <form onsubmit="handleRegister(event)">
-                <input type="text" id="username" class="form-control mb-3" placeholder="Username" required>
-                <input type="email" id="email" class="form-control mb-3" placeholder="Email" required>
-                <input type="password" id="password" class="form-control mb-4" placeholder="Password" required>
-                <button type="submit" class="btn btn-primary-gradient w-100 mb-3">Sign Up</button>
-                <div class="text-center"><a href="login.html" class="text-primary text-decoration-none">Already have an account?</a></div>
-            </form>
+
+<body data-page="register">
+
+    <div class="login-container">
+        <!-- LEFT SIDE: BRANDING -->
+        <div class="brand-side">
+            <div class="circle c1"></div>
+            <div class="circle c2"></div>
+            <div class="brand-content">
+                <div class="bg-white text-primary rounded-3 p-3 d-inline-flex mb-4 shadow-lg">
+                    <i class="bi bi-person-plus-fill display-4"></i>
+                </div>
+                <h1 class="fw-bold brand-font display-4 mb-2">Join Us</h1>
+                <p class="fs-5 opacity-75">Start cleaning your data with AI today.<br>Fast, simple, and secure.</p>
+            </div>
+        </div>
+
+        <!-- RIGHT SIDE: REGISTER FORM -->
+        <div class="form-side">
+            <div class="login-card">
+                <div class="text-center mb-4">
+                    <h2 class="fw-bold text-dark brand-font">Create Account</h2>
+                    <p class="text-muted">Enter your details to get started.</p>
+                </div>
+
+                <form onsubmit="handleRegister(event)">
+                    <!-- Username -->
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="usernameInput" placeholder="Username" required>
+                        <label class="text-muted"><i class="bi bi-person me-2"></i>Username</label>
+                    </div>
+
+                    <!-- Email -->
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="emailInput" placeholder="name@example.com"
+                            required>
+                        <label class="text-muted"><i class="bi bi-envelope me-2"></i>Email Address</label>
+                    </div>
+
+                    <!-- Password -->
+                    <div class="form-floating mb-4">
+                        <input type="password" class="form-control" id="passwordInput" placeholder="Password" required>
+                        <label class="text-muted"><i class="bi bi-lock me-2"></i>Password</label>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary-gradient mb-3">Sign Up</button>
+
+                    <div class="text-center">
+                        <p class="text-muted small">Already have an account?
+                            <a href="login.html" class="text-primary fw-bold text-decoration-none">Sign In</a>
+                        </p>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<script>
-    async function handleRegister(e) {
-        e.preventDefault();
-        const res = await fetch("http://127.0.0.1:8000/register", {
-            method: "POST", headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ 
-                username: document.getElementById('username').value, 
-                email: document.getElementById('email').value, 
-                password: document.getElementById('password').value 
-            })
-        });
-        if (res.ok) { alert("Success! Please login."); window.location.href = "login.html"; }
-        else { alert("Error registering."); }
-    }
-</script>
+    <script src="script.js"></script>
 </body>
+
 </html>
